@@ -2,6 +2,10 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+13-Aug-2004
+~~~~~~~~~~~
+Set minimum width of toolbar so that all buttons are visible (Stephen Watson).
+
 10-Aug-2004
 ~~~~~~~~~~~
 When adding an entry to the Recently Visited menu, remove its parent directory.
